feat: Implement location details page with server-side loading and deletion functionality
- Added +page.server.ts to handle server-side loading of additional location info.
- Created +page.svelte for displaying location details, including images, visits, and maps.
- Integrated GPX file handling and rendering on the map.
- Updated map route to link to locations instead of adventures.
- Refactored profile and search routes to use LocationCard instead of AdventureCard.

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -249,7 +249,8 @@
     "share_location": "Teilen Sie diesen Ort!",
     "visit_calendar": "Besuchen Sie den Kalender",
     "wiki_location_desc": "Zieht Auszug aus dem Wikipedia -Artikel, der dem Namen des Standorts entspricht.",
-    "will_be_marked_location": "wird als besucht markiert, sobald der Standort gespeichert ist."
+    "will_be_marked_location": "wird als besucht markiert, sobald der Standort gespeichert ist.",
+    "no_locations_found": "Keine Standorte gefunden"
   },
   "home": {
     "desc_1": "Entdecken, planen und erkunden Sie mühelos",
