--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -301,7 +301,8 @@
     "share_location": "Поделитесь этим расположением!",
     "visit_calendar": "Посетите календарь",
     "wiki_location_desc": "Вытягивает отрывок из статьи Википедии, соответствующей названию места.",
-    "will_be_marked_location": "будет отмечен по посещению после сохранения местоположения."
+    "will_be_marked_location": "будет отмечен по посещению после сохранения местоположения.",
+    "no_locations_found": "Никаких мест не найдено"
   },
   "worldtravel": {
     "country_list": "Список стран",
