Refactor adventure references to locations across the backend and frontend
- Updated CategoryViewSet to reflect location context instead of adventures.
- Modified ChecklistViewSet to include locations in retrieval logic.
- Changed GlobalSearchView to search for locations instead of adventures.
- Adjusted IcsCalendarGeneratorViewSet to handle locations instead of adventures.
- Refactored LocationImageViewSet to remove unused import.
- Updated LocationViewSet to clarify public access for locations.
- Changed LodgingViewSet to reference locations instead of adventures.
- Modified NoteViewSet to prevent listing all locations.
- Updated RecommendationsViewSet to handle locations in parsing and response.
- Adjusted ReverseGeocodeViewSet to search through user locations.
- Updated StatsViewSet to count locations instead of adventures.
- Changed TagsView to reflect activity types for locations.
- Updated TransportationViewSet to reference locations instead of adventures.
- Added new translations for search results related to locations in multiple languages.
- Updated dashboard and profile pages to reflect location counts instead of adventure counts.
- Adjusted search routes to handle locations instead of adventures.

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -572,7 +572,13 @@
   "search": {
     "adventurelog_results": "AdventureLog-Ergebnisse",
     "online_results": "Online-Ergebnisse",
-    "public_adventures": "Öffentliche Abenteuer"
+    "public_adventures": "Öffentliche Abenteuer",
+    "cities": "Städte",
+    "countries": "Länder",
+    "found": "gefunden",
+    "result": "Ergebnis",
+    "results": "Ergebnisse",
+    "try_searching_desc": "Versuchen Sie, nach Abenteuern, Sammlungen, Ländern, Regionen, Städten oder Nutzern zu suchen."
   },
   "map": {
     "add_adventure": "Neues Abenteuer hinzufügen",
