Update backup export versioning and improve data restore warning message

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -497,7 +497,24 @@
 		"enter_new_password": "Enter new password",
 		"connected": "Connected",
 		"disconnected": "Disconnected",
-		"invalid_credentials": "Invalid credentials"
+		"invalid_credentials": "Invalid credentials",
+		"backup_restore": "Backup & Restore",
+		"backup_restore_desc": "Save your data or restore it from a previous backup file.",
+		"whats_included": "What's included",
+		"mfa_required": "MFA Required",
+		"secure_your_account": "Secure your account",
+		"setup_required": "Setup Required",
+		"scan_qr_code": "Scan QR Code",
+		"scan_with_authenticator_app": "Scan with authenticator app",
+		"manual_entry": "Manual Entry",
+		"verify_setup": "Verify Setup",
+		"enter_6_digit_code": "Enter 6 digit code",
+		"enter_code_from_app": "Enter code from app",
+		"copy_all": "Copy all",
+		"important": "Important",
+		"error_occurred": "An error has occurred",
+		"mfa_already_enabled": "MFA already enabled",
+		"complete_setup_to_enable": "Complete setup to enable MFA"
 	},
 	"collection": {
 		"collection_created": "Collection created successfully!",
