--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -497,7 +497,24 @@
     "all_rights_reserved": "Reservados todos los derechos.",
     "email_verified_erorr_desc": "Su correo electrónico no pudo ser verificado. \nPor favor intente de nuevo.",
     "no_emai_set": "Sin conjunto de correo electrónico",
-    "invalid_credentials": "Credenciales no válidas"
+    "invalid_credentials": "Credenciales no válidas",
+    "backup_restore": "Respaldo",
+    "backup_restore_desc": "Guardar sus datos o restaurarlo desde un archivo de copia de seguridad anterior.",
+    "complete_setup_to_enable": "Configuración completa para habilitar MFA",
+    "copy_all": "Copiar todo",
+    "enter_6_digit_code": "Ingrese el código de 6 dígitos",
+    "enter_code_from_app": "Ingrese el código desde la aplicación",
+    "error_occurred": "Se ha producido un error",
+    "important": "Importante",
+    "manual_entry": "Entrada manual",
+    "mfa_already_enabled": "MFA ya habilitado",
+    "mfa_required": "MFA requerido",
+    "scan_qr_code": "Escanear el código QR",
+    "scan_with_authenticator_app": "Escanear con la aplicación Authenticator",
+    "secure_your_account": "Asegure su cuenta",
+    "setup_required": "Configuración requerida",
+    "verify_setup": "Verificar la configuración",
+    "whats_included": "¿Qué está incluido?"
   },
   "checklist": {
     "checklist_delete_error": "Error al eliminar la lista de tareas",
