--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -497,7 +497,24 @@
     "disconnected": "Déconnecté",
     "email_management": "Gestion des e-mails",
     "enter_last_name": "Entrez votre nom de famille",
-    "invalid_credentials": "Des références non valides"
+    "invalid_credentials": "Des références non valides",
+    "backup_restore": "Sauvegarde",
+    "backup_restore_desc": "Enregistrez vos données ou restaurez-les à partir d'un fichier de sauvegarde précédent.",
+    "complete_setup_to_enable": "Configuration complète pour activer le MFA",
+    "copy_all": "Copier tout",
+    "enter_6_digit_code": "Entrez le code à 6 chiffres",
+    "enter_code_from_app": "Entrez le code à partir de l'application",
+    "error_occurred": "Une erreur s'est produite",
+    "important": "Important",
+    "manual_entry": "Entrée manuelle",
+    "mfa_already_enabled": "MFA déjà activé",
+    "mfa_required": "MFA requis",
+    "scan_qr_code": "Scanner le code QR",
+    "scan_with_authenticator_app": "Scanner avec l'application Authenticatrice",
+    "secure_your_account": "Sécuriser votre compte",
+    "setup_required": "Configuration requise",
+    "verify_setup": "Vérifiez la configuration",
+    "whats_included": "Ce qui est inclus"
   },
   "checklist": {
     "checklist_delete_error": "Erreur lors de la suppression de la liste de contrôle",
