--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -497,7 +497,24 @@
     "staff_status": "Stato del personale",
     "staff_user": "Utente del personale",
     "password_auth": "Autenticazione della password",
-    "invalid_credentials": "Credenziali non valide"
+    "invalid_credentials": "Credenziali non valide",
+    "backup_restore": "Backup",
+    "backup_restore_desc": "Salva i tuoi dati o ripristinarli da un precedente file di backup.",
+    "complete_setup_to_enable": "Setup completa per abilitare MFA",
+    "copy_all": "Copia tutto",
+    "enter_6_digit_code": "Immettere il codice a 6 cifre",
+    "enter_code_from_app": "Immettere il codice dall'app",
+    "error_occurred": "Si è verificato un errore",
+    "important": "Importante",
+    "manual_entry": "Ingresso manuale",
+    "mfa_already_enabled": "MFA già abilitato",
+    "mfa_required": "MFA richiesto",
+    "scan_qr_code": "Scansionare il codice QR",
+    "scan_with_authenticator_app": "Scansiona con l'app Authenticator",
+    "secure_your_account": "Proteggere il tuo account",
+    "setup_required": "Setup richiesto",
+    "verify_setup": "Verifica la configurazione",
+    "whats_included": "Cosa è incluso"
   },
   "checklist": {
     "checklist_delete_error": "Errore durante l'eliminazione della lista di controllo",
