--- a/frontend/src/locales/ko.json
+++ b/frontend/src/locales/ko.json
@@ -589,7 +589,24 @@
     "social_auth_setup": "소셜 인증 설정",
     "staff_status": "직원 상태",
     "staff_user": "직원 사용자",
-    "invalid_credentials": "잘못된 자격 증명"
+    "invalid_credentials": "잘못된 자격 증명",
+    "backup_restore": "지원",
+    "backup_restore_desc": "데이터를 저장하거나 이전 백업 파일에서 복원하십시오.",
+    "complete_setup_to_enable": "MFA를 활성화하기위한 완전한 설정",
+    "copy_all": "모두 복사하십시오",
+    "enter_6_digit_code": "6 자리 코드를 입력하십시오",
+    "enter_code_from_app": "앱에서 코드를 입력하십시오",
+    "error_occurred": "오류가 발생했습니다",
+    "important": "중요한",
+    "manual_entry": "수동 입력",
+    "mfa_already_enabled": "MFA는 이미 활성화되었습니다",
+    "mfa_required": "MFA가 필요합니다",
+    "scan_qr_code": "QR 코드를 스캔하십시오",
+    "scan_with_authenticator_app": "Authenticator 앱으로 스캔하십시오",
+    "secure_your_account": "계정을 확보하십시오",
+    "setup_required": "설정이 필요합니다",
+    "verify_setup": "설정을 확인하십시오",
+    "whats_included": "포함 된 내용"
   },
   "share": {
     "go_to_settings": "설정으로 이동",
