--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -497,7 +497,24 @@
     "staff_status": "Status",
     "staff_user": "Personeelsgebruiker",
     "connected": "Aangesloten",
-    "invalid_credentials": "Ongeldige referenties"
+    "invalid_credentials": "Ongeldige referenties",
+    "backup_restore": "Back -up",
+    "backup_restore_desc": "Sla uw gegevens op of herstel deze in een eerder back -upbestand.",
+    "complete_setup_to_enable": "Volledige installatie om MFA in te schakelen",
+    "copy_all": "Kopieer alles",
+    "enter_6_digit_code": "Voer 6 cijfercode in",
+    "enter_code_from_app": "Voer de code uit van app",
+    "error_occurred": "Er is een fout opgetreden",
+    "important": "Belangrijk",
+    "manual_entry": "Handmatig invoer",
+    "mfa_already_enabled": "MFA al ingeschakeld",
+    "setup_required": "Instellingen vereist",
+    "verify_setup": "Controleer de installatie",
+    "whats_included": "Wat is inbegrepen",
+    "mfa_required": "MFA vereist",
+    "scan_qr_code": "Scan QR -code",
+    "scan_with_authenticator_app": "Scan met authenticator -app",
+    "secure_your_account": "Beveilig uw account"
   },
   "checklist": {
     "checklist_delete_error": "Fout bij het verwijderen van de checklist",
