--- a/frontend/src/locales/no.json
+++ b/frontend/src/locales/no.json
@@ -497,7 +497,24 @@
     "social_auth_setup": "Sosial autentiseringsoppsett",
     "staff_status": "Personalstatus",
     "staff_user": "Personalbruker",
-    "invalid_credentials": "Ugyldig legitimasjon"
+    "invalid_credentials": "Ugyldig legitimasjon",
+    "backup_restore": "Sikkerhetskopi",
+    "backup_restore_desc": "Lagre dataene dine eller gjenopprett dem fra en tidligere sikkerhetskopifil.",
+    "complete_setup_to_enable": "Komplett oppsett for å aktivere MFA",
+    "copy_all": "Kopier alle",
+    "enter_6_digit_code": "Skriv inn 6 -sifret kode",
+    "enter_code_from_app": "Skriv inn kode fra appen",
+    "error_occurred": "Det har oppstått en feil",
+    "important": "Viktig",
+    "manual_entry": "Manuell oppføring",
+    "mfa_already_enabled": "MFA er allerede aktivert",
+    "mfa_required": "MFA kreves",
+    "scan_qr_code": "Skann QR -kode",
+    "scan_with_authenticator_app": "Skann med Authenticator -appen",
+    "secure_your_account": "Sikre kontoen din",
+    "setup_required": "Oppsett kreves",
+    "verify_setup": "Bekreft oppsett",
+    "whats_included": "Hva som er inkludert"
   },
   "collection": {
     "collection_created": "Samling opprettet!",
