--- a/frontend/src/locales/pl.json
+++ b/frontend/src/locales/pl.json
@@ -497,7 +497,24 @@
     "social_auth_setup": "Konfiguracja uwierzytelniania społecznego",
     "staff_status": "Status personelu",
     "staff_user": "Użytkownik personelu",
-    "invalid_credentials": "Nieprawidłowe poświadczenia"
+    "invalid_credentials": "Nieprawidłowe poświadczenia",
+    "backup_restore": "Kopia zapasowa",
+    "backup_restore_desc": "Zapisz dane lub przywróć je z poprzedniego pliku kopii zapasowej.",
+    "complete_setup_to_enable": "Pełna konfiguracja, aby włączyć MFA",
+    "copy_all": "Kopiuj wszystko",
+    "enter_6_digit_code": "Wprowadź 6 -cyfrowy kod",
+    "enter_code_from_app": "Wprowadź kod z aplikacji",
+    "error_occurred": "Wystąpił błąd",
+    "important": "Ważny",
+    "manual_entry": "Wpis ręczny",
+    "mfa_already_enabled": "MFA już włączona",
+    "mfa_required": "Wymagane MSZ",
+    "scan_qr_code": "Skanuj kod QR",
+    "scan_with_authenticator_app": "Skanuj za pomocą aplikacji Authenticator",
+    "secure_your_account": "Zabezpiecz swoje konto",
+    "setup_required": "Wymagana konfiguracja",
+    "verify_setup": "Sprawdź konfigurację",
+    "whats_included": "Co jest uwzględnione"
   },
   "collection": {
     "collection_created": "Kolekcja została pomyślnie utworzona!",
