--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -497,7 +497,24 @@
     "enter_new_password": "Введите новый пароль",
     "connected": "Подключено",
     "disconnected": "Отключено",
-    "invalid_credentials": "Неверные полномочия"
+    "invalid_credentials": "Неверные полномочия",
+    "backup_restore": "Резервная копия",
+    "backup_restore_desc": "Сохраните данные или восстановите их из предыдущего файла резервного копирования.",
+    "complete_setup_to_enable": "Полная установка, чтобы включить MFA",
+    "copy_all": "Копировать все",
+    "enter_6_digit_code": "Введите 6 -значный код",
+    "enter_code_from_app": "Введите код из приложения",
+    "error_occurred": "Произошла ошибка",
+    "important": "Важный",
+    "manual_entry": "Ручная запись",
+    "mfa_already_enabled": "MFA уже включен",
+    "mfa_required": "MFA требуется",
+    "scan_qr_code": "Сканировать QR -код",
+    "scan_with_authenticator_app": "Сканирование с помощью приложения аутентификатора",
+    "secure_your_account": "Защитите свою учетную запись",
+    "setup_required": "Настройка требуется",
+    "verify_setup": "Проверьте настройку",
+    "whats_included": "Что включено"
   },
   "collection": {
     "collection_created": "Коллекция успешно создана!",
