--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -497,7 +497,24 @@
     "social_auth_setup": "Social autentiseringsinställning",
     "staff_status": "Personalstatus",
     "staff_user": "Personalanvändare",
-    "invalid_credentials": "Ogiltiga referenser"
+    "invalid_credentials": "Ogiltiga referenser",
+    "backup_restore": "Säkerhetskopiering",
+    "backup_restore_desc": "Spara dina data eller återställa dem från en tidigare säkerhetskopieringsfil.",
+    "complete_setup_to_enable": "Komplett installation för att aktivera MFA",
+    "copy_all": "Kopiera alla",
+    "enter_6_digit_code": "Ange 6 siffror",
+    "enter_code_from_app": "Ange kod från appen",
+    "error_occurred": "Ett fel har inträffat",
+    "important": "Viktig",
+    "manual_entry": "Manuell inträde",
+    "mfa_already_enabled": "MFA redan aktiverat",
+    "mfa_required": "MFA krävs",
+    "scan_qr_code": "Skanna QR -kod",
+    "scan_with_authenticator_app": "Skanna med autentisatorapp",
+    "secure_your_account": "Säkra ditt konto",
+    "setup_required": "Installation krävs",
+    "verify_setup": "Verifiera installationen",
+    "whats_included": "Vad ingår"
   },
   "checklist": {
     "checklist_delete_error": "Ett fel uppstod vid borttagning av checklista",
