--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -497,7 +497,24 @@
     "quick_actions": "快速动作",
     "region_updates": "区域更新",
     "region_updates_desc": "更新访问了地区和城市",
-    "invalid_credentials": "无效的凭据"
+    "invalid_credentials": "无效的凭据",
+    "backup_restore": "备份",
+    "backup_restore_desc": "保存数据或从以前的备份文件还原。",
+    "complete_setup_to_enable": "完整的设置以启用MFA",
+    "copy_all": "复制全部",
+    "enter_6_digit_code": "输入6位数代码",
+    "enter_code_from_app": "从应用程序输入代码",
+    "error_occurred": "发生了错误",
+    "important": "重要的",
+    "manual_entry": "手动输入",
+    "mfa_already_enabled": "MFA已经启用",
+    "mfa_required": "需要MFA",
+    "scan_qr_code": "扫描QR码",
+    "scan_with_authenticator_app": "使用身份验证器应用程序扫描",
+    "secure_your_account": "保护您的帐户",
+    "setup_required": "需要设置",
+    "verify_setup": "验证设置",
+    "whats_included": "包括什么"
   },
   "checklist": {
     "checklist_delete_error": "删除清单时出错",
