--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -497,7 +497,24 @@
     "staff_status": "Personalstatus",
     "staff_user": "Personalbenutzer",
     "profile_info_desc": "Aktualisieren Sie Ihre persönlichen Daten und Ihr Profilbild",
-    "invalid_credentials": "Ungültige Anmeldeinformationen"
+    "invalid_credentials": "Ungültige Anmeldeinformationen",
+    "backup_restore": "Backup",
+    "backup_restore_desc": "Speichern Sie Ihre Daten oder stellen Sie sie in einer früheren Sicherungsdatei wieder her.",
+    "complete_setup_to_enable": "Komplettes Setup, um MFA zu aktivieren",
+    "copy_all": "Alle kopieren",
+    "enter_6_digit_code": "Geben Sie einen 6 -stelligen Code ein",
+    "enter_code_from_app": "Geben Sie den Code aus der App ein",
+    "error_occurred": "Es ist ein Fehler aufgetreten",
+    "important": "Wichtig",
+    "manual_entry": "Manueller Eintritt",
+    "mfa_already_enabled": "MFA bereits aktiviert",
+    "mfa_required": "MFA erforderlich",
+    "scan_qr_code": "Scannen QR -Code",
+    "scan_with_authenticator_app": "Scannen Sie mit Authenticator App",
+    "secure_your_account": "Sichern Sie Ihr Konto",
+    "setup_required": "Setup erforderlich",
+    "verify_setup": "Überprüfen Sie das Setup",
+    "whats_included": "Was ist enthalten"
   },
   "checklist": {
     "checklist_delete_error": "Fehler beim Löschen der Checkliste",
